// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> with logged in should render correctly 1`] = `
<header
  className="Header"
  data-testid="Header"
>
  <div
    className="content-container"
  >
    <div
      className="sm:flex items-center text-center sm:text-left"
    >
      <div
        className="flex-grow"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "inline-block",
                "height": 50,
                "overflow": "hidden",
                "position": "relative",
                "width": 50,
              }
            }
          >
            <img
              alt="Resource Rank Logo"
              decoding="async"
              src="/_next/image?url=%2Fimg%2Flogo.svg&w=128&q=75"
              srcSet="/_next/image?url=%2Fimg%2Flogo.svg&w=64&q=75 1x, /_next/image?url=%2Fimg%2Flogo.svg&w=128&q=75 2x"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </a>
      </div>
      <div
        className="NavItem NavLink Active"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Home
        </a>
      </div>
      <div
        className="NavItem NavLink"
      >
        <a
          href="/topics"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Topics
        </a>
      </div>
      <div
        className="NavItem"
      >
        <button
          className="LoadingButton"
          data-testid="LoadingButton"
          onClick={[Function]}
        >
          Logout
        </button>
      </div>
    </div>
  </div>
</header>
`;

exports[`<Header /> with not logged in should render correctly 1`] = `
<header
  className="Header"
  data-testid="Header"
>
  <div
    className="content-container"
  >
    <div
      className="sm:flex items-center text-center sm:text-left"
    >
      <div
        className="flex-grow"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "inline-block",
                "height": 50,
                "overflow": "hidden",
                "position": "relative",
                "width": 50,
              }
            }
          >
            <img
              alt="Resource Rank Logo"
              decoding="async"
              src="/_next/image?url=%2Fimg%2Flogo.svg&w=128&q=75"
              srcSet="/_next/image?url=%2Fimg%2Flogo.svg&w=64&q=75 1x, /_next/image?url=%2Fimg%2Flogo.svg&w=128&q=75 2x"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </a>
      </div>
      <div
        className="NavItem NavLink Active"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Home
        </a>
      </div>
      <div
        className="NavItem NavLink"
      >
        <a
          href="/topics"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Topics
        </a>
      </div>
      <div
        className="NavItem"
      >
        <button
          className="LoadingButton"
          data-testid="LoadingButton"
          onClick={[Function]}
        >
          Login
        </button>
      </div>
    </div>
  </div>
</header>
`;
